--- a/views/index.erb
+++ b/views/index.erb
@@ -76,7 +76,7 @@
                     <p class="lead">広島には世界遺産の原爆ドーム・宮島をはじめ多くの観光名所があります。</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="/images/ipad.png" alt="">
+                    <img class="img-responsive" src="/images/001.jpg" alt="">
                 </div>
             </div>
 
@@ -98,7 +98,7 @@
                     <p class="lead">広島にはガイドブックに乗っている観光名所以外にも多くの面白い場所があります</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="/images/dog.png" alt="">
+                    <img class="img-responsive" src="/images/002.jpg" alt="">
                 </div>
             </div>
 
@@ -120,7 +120,7 @@
                     <p class="lead">ひろしまおもしろマップはそんな次の面白いを提供してくれるサービスです</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="/images/phones.png" alt="">
+                    <img class="img-responsive" src="/images/003.jpg" alt="">
                 </div>
             </div>
 
@@ -136,7 +136,7 @@
 
             <div class="row">
                 <div class="col-lg-6">
-                    <h2>お知らせを受け取る:</h2>
+                    <h2>乞うご期待！</h2>
                 </div>
                 <div class="col-lg-6">
                     <ul class="list-inline banner-social-buttons">
