--- a/views/index.erb
+++ b/views/index.erb
@@ -127,6 +127,21 @@
         </div>
         <!-- /.container -->
 
+        <div class="content-section-b">
+
+            <div class="container">
+
+              <h3>ひろしまおもしろマップ</h3>
+              <p>地図上のマーカーをクリックすると、その施設の詳細へのリンクを表示します。情報ウィンドウは常に1つのみ表示します（他のマーカーをクリックすると、表示されている情報ウィンドウはいったん閉じます）。</p>
+              <!-- 地図の埋め込み表示 -->
+              <div id="map_canvas"></div>
+
+            </div>
+            <!-- /.container -->
+
+        </div>
+        <!-- /.content-section-b -->
+
     </div>
     <!-- /.content-section-a -->
 
